fixed task name field being too short

--- a/app/assets/stylesheets/components/dashboard/task_index.scss
+++ b/app/assets/stylesheets/components/dashboard/task_index.scss
@@ -72,6 +72,7 @@
 .task-item-left {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .task-list .task-check-box-unchecked {
@@ -121,7 +122,7 @@
 }
 
 .task-item .task-item-input {
-  width: 200px;
+  width: 100%;
 }
 
 .task-item-input input {
